new oh-my-zsh theme

--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "dir_colors/dircolors-solarized"]
 	path = dir_colors/dircolors-solarized
 	url = https://github.com/seebi/dircolors-solarized.git
+[submodule "oh-my-zsh"]
+	path = oh-my-zsh
+	url = https://github.com/jeremyFreeAgent/oh-my-zsh-powerline-theme.git
