--- a/uncrustify_obj_c.cfg
+++ b/uncrustify_obj_c.cfg
@@ -276,7 +276,7 @@ sp_after_ptr_star                        = remove   # ignore/add/remove/force
 sp_after_ptr_star_func                   = remove   # ignore/add/remove/force
 
 # Add or remove space before a pointer star '*', if followed by a func proto/def.
-sp_before_ptr_star_func                  = force   # ignore/add/remove/force
+sp_before_ptr_star_func                  = remove   # ignore/add/remove/force
 
 # Add or remove space before a reference sign '&'
 sp_before_byref                          = ignore   # ignore/add/remove/force
@@ -491,10 +491,10 @@ sp_macro                                 = ignore   # ignore/add/remove/force
 sp_macro_func                            = remove   # ignore/add/remove/force
 
 # Add or remove space between 'else' and '{' if on the same line
-sp_else_brace                            = ignore   # ignore/add/remove/force
+sp_else_brace                            = force   # ignore/add/remove/force
 
 # Add or remove space between '}' and 'else' if on the same line
-sp_brace_else                            = ignore   # ignore/add/remove/force
+sp_brace_else                            = force   # ignore/add/remove/force
 
 # Add or remove space between '}' and the name of a typedef on the same line
 sp_brace_typedef                         = ignore   # ignore/add/remove/force
@@ -721,7 +721,7 @@ align_typedef_func                       = 0        # number
 # 0: Align on typedef type, ignore '*'
 # 1: The '*' is part of type name: typedef int  *pint;
 # 2: The '*' is part of the type, but dangling: typedef int *pint;
-align_typedef_star_style                 = 0        # number
+align_typedef_star_style                 = 2        # number
 
 # Controls the positioning of the '&' in typedefs. Just try it.
 # 0: Align on typedef type, ignore '&'
@@ -854,7 +854,7 @@ nl_union_brace                           = remove   # ignore/add/remove/force
 nl_if_brace                              = remove   # ignore/add/remove/force
 
 # Add or remove newline between '}' and 'else'
-nl_brace_else                            = force   # ignore/add/remove/force
+nl_brace_else                            = remove   # ignore/add/remove/force
 
 # Add or remove newline between 'else if' and '{'
 # If set to ignore, nl_if_brace is used instead
