--- a/proxychains.conf
+++ b/proxychains.conf
@@ -112,7 +112,7 @@ tcp_connect_time_out 8000
 # add proxy here ...
 # meanwile
 # defaults set to "tor"
-socks5 127.0.0.1 56788
-http 127.0.0.1 56789
-#socks4 10.159.32.155 1080
+#socks5 127.0.0.1 56788
+#http 127.0.0.1 56789
+socks5 10.159.32.155 1081
 #http 10.144.1.12 8080
