--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,7 @@
 setw -g mode-keys vi
 
 unbind C-b
-set -g prefix C-a
+set -g prefix M-q
 
 # bind a reload key
 bind R source-file ~/.tmux.conf \; display-message "Config reloaded.."
@@ -43,7 +43,7 @@ set -g pane-active-border-fg brightred
 
 ## Status bar design
 # status line
-set -g status-utf8 on
+#set -g status-utf8 on
 set -g status-justify left
 set -g status-bg default
 set -g status-fg colour12
@@ -131,3 +131,7 @@ set -g message-fg colour232
 set -g message-bg colour166
 
 # }
+
+# Start windows and panes at 1, not 0
+set -g base-index 1
+setw -g pane-base-index 1
