--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,7 @@
 setw -g mode-keys vi
 
 unbind C-b
-set -g prefix M-q
+set -g prefix C-a
 
 # bind a reload key
 bind R source-file ~/.tmux.conf \; display-message "Config reloaded.."
@@ -27,9 +27,9 @@ bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
 # Enable mouse control 
-set -g mouse on
+# set -g mouse on
 
-set -s -g escape-time 0
+# set -s -g escape-time 0
 
 
 
@@ -43,7 +43,7 @@ set -g pane-active-border-fg brightred
 
 ## Status bar design
 # status line
-#set -g status-utf8 on
+# set -g status-utf8 on
 set -g status-justify left
 set -g status-bg default
 set -g status-fg colour12
@@ -55,7 +55,7 @@ set -g message-bg yellow
 set -g message-command-fg blue
 set -g message-command-bg black
 
-#window mode
+# window mode
 setw -g mode-bg colour6
 setw -g mode-fg colour0
 
